<resources>
    <string name="app_name">TSparking</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="helloUser">Hello </string>
    <string name="userprofile">User Profile</string>
    <string name="firstname">First Name: </string>
    <string name="lastname">Last Name: </string>
    <string name="email">Email: </string>
    <string name="searchinguser">Searching User </string>
    <string name="searchingslot">Searching Slot </string>
    <string name="back">back</string>
    <string name="emaillogin">Enter Email</string>
    <string name="passwordlogin">Enter Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="firstnamelogin">Enter First Name</string>
    <string name="lastnamelogin">Enter Last Name</string>
    <string name="logout">Log Out</string>
    <string name="enteremailofuser">Enter email to search</string>
    <string name="search">search</string>
    <string name="enteridslot">Enter ID slot to search</string>
    <string name="Disable">Disable</string>
    <string name="Indoor">Indoor</string>
    <string name="free">Free</string>
    <string name="Managerpage">Manager page</string>
    <string name="Addslot">Add Slot</string>
    <string name="Addparking">Add Parking</string>
    <string name="No">No</string>
    <string name="Yes">Yes</string>
    <string name="choose">Choose slot</string>
    <string name="Writereport">Enter your report here..</string>
    <string name="Savereport">Save report</string>
    <string name="Release">Release slot</string>
    <string name="messageDialog">Are you still park in</string>
    <string name="Writeby">Write by:</string>
    <string name="Report">Report</string>
    <string name="TheReport">the report:</string>
    <string name="DateOfCreate">Date of create:</string>
    <string name="OfNumSlot">of slot number:</string>
    <string name="DateOfCreate">Date of create:"</string>
    <string name="saveSlot">Save Slot</string>
    <string name="areaSaveSlot">Area Slot:</string>
    <string name="disableSaveSlot">Disabled Slot:</string>
    <string name="priceSaveSlot">Price Slot:</string>
    <string name="Results">Results</string>
    <string name="Adress">Adress</string>
    <string name="Paved">Paved</string>
    <string name="Price">Price</string>



</resources>