<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.ManagerPage">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:gravity="center"
        android:text="@string/Managerpage"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/RegisterSlotB"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/buttonb"
            android:text="@string/Addslot"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/RegisterParkingB"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/buttonb"
            android:text="@string/Addparking"
            android:textSize="20sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/BackB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="10dp"
        android:layout_weight="0"
        android:background="@drawable/buttonb"
        android:text="@string/back"
        android:textSize="15sp"/>


</LinearLayout>