<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.SearchingSlot">

    <TextView
        android:id="@+id/SearchingSlotT"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.6"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/searchingslot"
        android:textSize="25dp" />

<!-- 
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:clickable="true"
        android:spinnerMode="dropdown"/> -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">


        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:drawable/btn_dropdown"
            android:clickable="true"
            android:spinnerMode="dropdown" />

        <CheckBox
            android:id="@+id/IsDisableCB"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Disable"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/IsFreeCB"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/free"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/IsIndoorCB"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Indoor"
            android:textSize="20sp" />

        <Button
            android:id="@+id/SearchingSlotBP"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:padding="10dp"
            android:text="@string/search"
            android:textSize="15dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/BackB"
            android:layout_width="78dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/buttonb"
            android:text="@string/back" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ResultT"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/Results" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleViewSlot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"

            android:layout_weight="0.3"></androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>

<!--     <Button
        android:id="@+id/BackB"
        android:layout_width="78dp"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:layout_margin="10dp"
        android:layout_weight="1.25"
        android:background="@drawable/buttonb"
        android:text="@string/back" /> -->

</LinearLayout>