<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:orientation="vertical">


            <TextView
                android:id="@+id/UserProfileTRecycle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/userprofile"
                android:textSize="30dp" />

            <TextView
                android:id="@+id/FirstNameTRecycle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/firstname"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/FirstNameTPrRecycle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="firstname private// delete" />

            <TextView
                android:id="@+id/LastNameTRecycle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/lastname"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/LastNameTPrRecycle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="lastname private// delete" />

            <TextView
                android:id="@+id/EmailTRecycle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/email"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/EmailTPrRecycle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="email private// delete" />

        </LinearLayout>



    </LinearLayout>
</LinearLayout>

