<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_login"
    tools:context=".fragments.Login_frag">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/EmailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/emaillogin"
            android:inputType="textEmailAddress"
            android:padding="40dp"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/PasswordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/passwordlogin"
            android:inputType="number|numberPassword"
            android:padding="40dp"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <Button
            android:id="@+id/LoginB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_button"
            android:enabled="false"
            android:text="@string/login"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/RegisterB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_button"
            android:text="@string/register"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:textSize="20sp" />
    </LinearLayout>

    <!-- <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/RegisterParkingB"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/buttonb"
            android:text="reg Parking" />

        <Button
            android:id="@+id/RegisterSlotB"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/buttonb"
            android:text="reg Slot" />
    </LinearLayout>-->


</LinearLayout>